--- a/res/xml/pref_stack.xml
+++ b/res/xml/pref_stack.xml
@@ -16,14 +16,10 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <EditTextPreference
-        android:defaultValue="@string/pref_site_default"
-        android:inputType="textNoSuggestions"
+    <ListPreference
         android:key="pref_site"
-        android:maxLines="1"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
         android:title="@string/pref_site_title" />
+
     <EditTextPreference
         android:defaultValue="@string/pref_account_id_default"
         android:inputType="numberSigned"
